--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 ##custom##
-secrets.json
-my_settings.py
+# secrets.json
+# my_settings.py
 
 
 ### Django ###
